--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require":{
     "php":">=7.1",
     "contao/core-bundle":"^4.4",
-    "contao-estatemanager/core": "*",
+    "contao-estatemanager/core": "dev-master",
     "oveleon/contao-onoffice-api-bundle": "^1.0"
   },
   "require-dev": {
